--- a/example_config.yml
+++ b/example_config.yml
@@ -1,8 +1,8 @@
-server:       irc.elisa.fi
-port:         6667
-nick:         my_bot
-username:     my_bot
-realname:     My Lullizio Bot
-channels:     ["#mybot_pwns", "#lullizio_ftw"]
-modules_dir:  modules
-modules:      ["youtube"]
+server:           irc.elisa.fi
+port:             6667
+nick:             my_bot
+username:         my_bot
+realname:         My Lullizio Bot
+channels:         ["#mybot_pwns", "#lullizio_ftw"]
+modules_dir:      modules
+excluded_modules: ["youtube"]
