Add monkey module for mapping regexps to some replies
Behaves quite much like a monkey...

Signed-off-by: Aki Saarinen <aki@akisaarinen.fi>

--- a/example_config.yml
+++ b/example_config.yml
@@ -8,3 +8,4 @@ modules_dir:      modules
 excluded_modules: ["youtube"]
 module_config:
   module_value:   "some example value for module usage"
+  monkey_file:    "monkey_expr.yml"
